@@ -10,25 +10,25 @@ DIST distribute-0.6.15.tar.gz 289103 RMD160 6148fec3096d201ca1ca1fec895aa529e92b
 DIST distribute-0.6.16.tar.gz 288263 RMD160 47e04a6e11665ed7face5dee98d7ee55e9100205 SHA1 d31026d1b80f6340d4a85b9b45e5a5703d443104 SHA256 1edb8f34303a9af42db419bc5cfd189572351797d57b62c03e6dc7bf61168b56
 DIST distribute-0.6.19.tar.gz 399367 RMD160 7acad7c1847ed48f286fc66387941276a39fc021 SHA1 4b9569319aa8cc283030b3d996b5d88e022c684f SHA256 5fcb8463f9a5d485ff3668ed7996849df78f922592248cb0b84528a61d52e58a
 EBUILD setuptools-0.6.14.ebuild 1762 RMD160 df1c20e7cc5558a6eea33e619534ba70126e3c15 SHA1 3d2df01ce5be99902d7c749a3e398b4e962f2873 SHA256 849d10ed8fff63920c64174210d2f95e00c366e3134ca328dc7578cfd4e81f13
-EBUILD setuptools-0.6.15.ebuild 1777 RMD160 42e235937ff2027a090292d7b66a3a820d3d09a5 SHA1 3782771978c4ccc62f335e7e9741fda930124d86 SHA256 c0bc05cc54a846c23d548eecfa0d513e579368ce81a56bacc350314942a54335
-EBUILD setuptools-0.6.16.ebuild 1788 RMD160 65b34a45e1337770574e71597c511780b0a0a816 SHA1 3db4cec76deace4e4acb6197f1d636b1ef6f71c6 SHA256 07d8fde41265aba0101d632148d089bb09b320b8e637d15dded21ec83f2bd009
+EBUILD setuptools-0.6.15.ebuild 1841 RMD160 995015eba3e480f12bd6e014b6b594eabc0c002d SHA1 010f414742f5227c2d097af942731855e2423068 SHA256 07f4fba426c22618a8f03f9be02dc4661a994e8c5e01e68343d8aa9fbbc7b3a0
+EBUILD setuptools-0.6.16.ebuild 1852 RMD160 e9dd9fc4daf0a3156c8f10903375d083136a6582 SHA1 ae5dbbdad2252717df29e983cdaa75bfec4c4711 SHA256 9d24879f1f37a2e2749c32172cbf3dfa4556a2e19fa745d969b0d389ef4f98c1
 EBUILD setuptools-0.6.19.ebuild 1765 RMD160 e97f3f9b4824acb3d78dba11020dae3068e099fc SHA1 8e28fc508a727cea1a31e4f3a9b1d7d5122cfe1a SHA256 57002d671637afa9ab2860ec84f48972a18a818923afce10bb571694b7652f0c
-MISC ChangeLog 19675 RMD160 57aeee1a0399b97ab7ab6750611f7a8d1a9747ca SHA1 2210def803c0cffba9cc50fe845a1c3b2d7a69b4 SHA256 5a3fd3dadce79e8642095fde6633eb4a2fc813fcac254af6de9cbdbd313bc6b6
+MISC ChangeLog 19834 RMD160 3f55b6b8a7ca5565287285d84ed9085214d521b8 SHA1 42efb72f928a9fe5b71be2494990f205e9204a93 SHA256 4543aa3b0523d3b98ae4bdc455d02f89842e1993b128957a78890baf10c614e2
 MISC metadata.xml 160 RMD160 e730f96ab97c5be577a6d6d05f04990374a0dffb SHA1 2aa5e6be9c265c0e7bceb78ee9fd20df5f818e36 SHA256 6cd954a9de2307c57d32b25fa3599dee2908a4ddc6a98594f593d53577307a3a
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQIcBAEBCgAGBQJOBOKXAAoJEPqDWhW0r/LCJZcP/3EeYm9NnikGpyIwfGg0zh25
-GT9l2TUeQ2UAVmICwIx4wW/b5rrEpUmk8ib1pgi3865Nb535vPlW3VHLP+5ljPxU
-xawAYpkGqZtrTtooRRvv7HfcuTieRrA0lVz9W6BqhVd3MvCIeB8Mhkm4DlVGO54X
-WQIuRKWUDS18ChWNy9k+dPWpK8//aOweodON0lhx1N9W9lDW59ZmF4xi/jfxicAe
-xouxrZDfM3RNeJasacNyMIcU56pdBRj/64B+SfsyVxn64ohIe+8zUTH3VYgN0B5d
-596WLrlMYk6P61p0VrsFutvYAu6D2KbUQSFtkhys2WFegQDPOZ6eZxPxN7Biu3/b
-t5cC8ssDBP/TID9IG9dkbbzt56jNYdY+qWeU0a2hT1FfNXaI+0xn00VEqEFkt+LZ
-yjINOtmtw9AdVmhHIjDEx/sPeLlczwippHA1jGZvhtBKDwvZ7OamU7sd85FEosYr
-FeYdH0xMMuMuQMHq5RX5bl7Bl1Er4xHrX50Kka+vol1cNYl+4pik/O4eKf56kAov
-37RYm0hyrAvzMVvm0FZAoMGlmiQLPUJhlfsA2A+7LkuEmK5ab2JF+v/ISPzhIotr
-6wsAP+WD/0kvNnJh4VtnH8YIBhlnO4wU+oGDRO6ncHEiv2FaVnQo/yido79iaYdF
-E6/Lz4em5SNaNIzIUvue
-=srjG
+iQIcBAEBCgAGBQJOTrsJAAoJEPqDWhW0r/LCo9QP/jgYtUraf+qwmNMxezFViV86
+Ffjwe0KOSw4TckUoXxe7lZgxQCgjKSFO1X2rmuGNetgQcbtgjrS79kcZAyTdU317
+7cV2dF9Bhu/PUEqVB8xLNjjjVhDts3/JWE3V4zVKeArXnvD4M5S6XjJfSt6CQV+q
+kZf23aVVmSv0W67N4EDnQUKMzK91GCDZZr/O+cHtwdFz3+YlaDUBuqKx+h8Gaq3N
+haL1MHKJ4JBRVtYRe5ZzkhGy2oYn/NAjohuyGFH8eeucAdekbjvX/cy0hz6ntkHy
+jIBUUOjGlJPlM1lVRFN4nAbrhAKWrZ4cCBIrEzv6SMKm3N3CekUhvEzOIOQwZPXy
+h8QyumTZctF0Vjd5OueMkIZX6x8YnvWuDwS/Q7BQ/7wEyhYtXs6eEIoqwRgqcfeK
+s2uM5PlEo6CKMzlPVN0g7CrOxvZiIRy2MUsfAowKdb5UlnLYIlM8hFhcxB+pmOti
+8Txb7RmaFTSikMMNNfStpqobYqdT6qUe7E0sF0QTeOS+fBhb/1MX6cQ0AGQREiRJ
+I8VCRVKCSY0R1y9riOVpyrZBU6lTdHDk8b2RTRJL7tTDxV3qVUroVSLmVH7U4z/Q
+cO0Ueme7SuxryGE1DpVEvI6Ym02ISVC8gjZCtZ392xxs746nsefJYn3iKA4mG/jk
+kvHY74Mddo/fwt39bqoU
+=Rl+c
 -----END PGP SIGNATURE-----
